<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_bg_home"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/student_name"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentName"
            android:hint="@string/enter_name"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/department"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentDepartment"
            android:hint="@string/enter_department"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/date_of_birth"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentDOB"
            android:hint="@string/select_date_of_birth"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/age_will_be_automatically_calculated"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentAge"
            android:hint="@string/auto_calculated_from_dob"
            android:focusable="false"
            android:inputType="none"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/marks"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentMarks"
            android:hint="@string/enter_marks"
            android:inputType="number"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/father_s_name"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentFatherName"
            android:hint="@string/enter_father_s_name"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>



        <TextView
            android:text="@string/address"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentAddress"
            android:hint="@string/enter_address"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/phone_number"
            style="@style/LabelStyle"/>
        <EditText
            android:id="@+id/etStudentPhone"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                style="@style/ActionButtonStyle"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="30dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                style="@style/ActionButtonStyle"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="25dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
