<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_bg_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/departmentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_department"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/dobEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date_of_birth"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            style="@style/InputFieldStyle"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_will_be_automatically_calculated"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/marksEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_marks"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/fathersNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_father_s_name"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>



        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:layout_marginBottom="10dp"
            android:inputType="textPostalAddress"
            style="@style/InputFieldStyle"/>

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:layout_marginBottom="10dp"
            style="@style/InputFieldStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                style="@style/ActionButtonStyle"
                />

            <Button
                android:id="@+id/viewRecordsButton"
                android:text="@string/view_records"
                android:layout_marginStart="8dp"
                style="@style/ActionButtonStyle"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>