<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_bg_home"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Student Icon -->
        <ImageView
            android:id="@+id/studentIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_student"
            android:layout_marginBottom="8dp"
            />

        <!-- Student Name -->
        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"
            />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Student ID -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/student_id" />
                        <TextView android:id="@+id/studentId" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Department -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/department" />
                        <TextView android:id="@+id/studentDepartment" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Age -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/age" />
                        <TextView android:id="@+id/studentAge" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Marks -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/marks" />
                        <TextView android:id="@+id/studentMarks" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Father's Name -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/father_s_name" />
                        <TextView android:id="@+id/studentFatherName" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- DOB -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/dob" />
                        <TextView android:id="@+id/studentDOB" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Address -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/address" />
                        <TextView android:id="@+id/studentAddress" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Phone Number -->
                <androidx.cardview.widget.CardView style="@style/FieldCardStyle"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">
                    <LinearLayout style="@style/FieldLinearLayoutStyle">
                        <TextView style="@style/FieldLabelStyle" android:text="@string/phone_number" />
                        <TextView android:id="@+id/studentPhone" style="@style/FieldValueStyle"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        <!-- Buttons -->



    </LinearLayout>
</ScrollView>
